bazarr/deployment.bazarr.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
    environment: prod
  name: prod-bazarr
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - env:
        - name: PUID
          valueFrom:
            configMapKeyRef:
              key: PUID
              name: servarr-config
        - name: PGID
          valueFrom:
            configMapKeyRef:
              key: PGID
              name: servarr-config
        - name: TZ
          valueFrom:
            configMapKeyRef:
              key: TZ
              name: servarr-config
        - name: BAZARR__APP__INSTANCENAME
          value: "bazarr"
        - name: BAZARR__APP__THEME
          value: "dark"
        - name: BAZARR__AUTH__APIKEY
          value: <path:argocd/data/argocd-vault-plugin/bazarr/api_key>
        - name: BAZARR__AUTH__ENABLED
          value: "true"
        - name: BAZARR__AUTH__METHOD
          value: "External"
        - name: BAZARR__AUTH__REQUIRED
          value: "true"
        - name: BAZARR__LOG__ANALYTICSENABLED
          value: "false"
        - name: BAZARR__POSTGRES__USER
          value: <path:argocd/data/argocd-vault-plugin/bazarr/db_user>
        - name: BAZARR__POSTGRES__PASSWORD
          value: <path:argocd/data/argocd-vault-plugin/bazarr/db_password>
        - name: BAZARR__SERVER__URLBASE
          value: "/bazarr"
        - name: BAZARR__SERVER__BINDADDRESS
          value: "*"
        - name: BAZARR__SERVER__PORT
          value: "9696"
        - name: BAZARR__UPDATE__MECHANISM
          value: "Docker"
        - name: BAZARR__SERVER__PROXYENABLE
          value: "true"
        - name: BAZARR__SERVER__ENABLESSL
          value: "false"
        image: lscr.io/linuxserver/bazarr:latest
        name: bazarr
        ports:
        - containerPort: 6767
          name: http
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data/media/tv
          name: tv
        - mountPath: /data/media/movies
          name: movies
        imagePullPolicy: IfNotPresent
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prod-bazarr-config
      - name: tv
        persistentVolumeClaim:
          claimName: prod-media-tv
      - name: movies
        persistentVolumeClaim:
          claimName: prod-media-movies
