bazarr/service.bazarr.prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
    environment: prod
  name: prod-bazarr
  namespace: servarr
spec:
  ports:
  - name: http
    port: 6767
    protocol: TCP
    targetPort: 6767
  selector:
    app: bazarr
  type: ClusterIP
